# filterpath

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-issue.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build_release.yml  pull_requests.yml  test.yml
src/filterpath/: __init__.py  _exceptions.py  _get.py  _types.py
tests/: get_test.py
