[project]
name = "pathquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 120
src = ["src"]
force-exclude = true
# Match pylint version checking
target-version = "py311"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [ "ALL" ]
ignore = [
    # Specific ignores
    "ISC001",   # Conflicts with `ruff` formatter
    # Undocumented code
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Broad ignores
    "CPY", "PD", "NPY", "FBT", "TD", "FIX", "AIR", "ERA", "F401", "F821"
]
# Don't automatically remove `print`
# Stop automatically removing unused imports
# Stop automatically removing unused variables
unfixable = ["T201", "F401", "F841"]

[tool.ruff.lint.per-file-ignores]
# Ignore `assert` in test files (S101), magic values (PLR2004), and private member accessed (SLF001)
"*_test.py" = ["S101", "PLR2004", "SLF001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "8.1"
cache_dir = "$XDG_CACHE_HOME/pytest"
python_files = "*_test.py"
